--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@libsql/client": "^0.3.6",
     "@prisma/adapter-libsql": "^5.7.1",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
@@ -24,7 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "convex": "^1.12.0",
-    "lucide-react": "^0.300.0",
+    "lucide-react": "^0.379.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
