--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "convex": "^1.12.0",
+    "convex-helpers": "^0.1.41",
     "lucide-react": "^0.379.0",
     "next": "14.0.4",
     "react": "^18",
